# proctap

./: .justfile  Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs  monitor.rs
src/monitors/: diskstat.rs  interrupts.rs  memstat.rs  mod.rs  net.rs  netdev_stat.rs  proc.rs  queues.rs  snmp.rs  softirqs.rs  softnet_stat.rs
